--- a/startbootstrap-stylish-portfolio-gh-pages/css/stylish-portfolio.css
+++ b/startbootstrap-stylish-portfolio-gh-pages/css/stylish-portfolio.css
@@ -39,6 +39,13 @@ h6 {
   font-weight: 700;
 }
 
+.timer {
+  font-size: 300px;
+  font-weight: bold;
+  opacity: 0.85;
+
+}
+
 .text-faded {
   color: rgba(255, 255, 255, 0.7);
 }
@@ -371,11 +378,10 @@ a:hover, a:focus, a:active {
 }
 
 .center {
-    position: absolute;
-    width: 100px;
-    height: 50px;
-    top: 50%;
-    left: 50%;
-    margin-left: -50px; /* margin is -0.5 * dimension */
-    margin-top: -25px; 
+    position: absolute; 
+  left: 0; 
+  right: 0; 
+  margin-left: auto; 
+  margin-right: auto; 
+  width: 100px;
 }​
